<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>autoware_utils_v49</name>
  <version>1.5.0</version>
  <description>The autoware_utils package</description>
  <maintainer email="egon.kang@autocore.ai">Jian Kang</maintainer>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>
  <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake_v49</buildtool_depend>

  <depend>autoware_internal_debug_msgs_v49</depend>
  <depend>autoware_internal_msgs_v49</depend>
  <depend>autoware_internal_planning_msgs_v49</depend>
  <depend>autoware_perception_msgs_v49</depend>
  <depend>autoware_planning_msgs_v49</depend>
  <depend>autoware_utils_debug_v49</depend>
  <depend>autoware_utils_diagnostics_v49</depend>
  <depend>autoware_utils_geometry_v49</depend>
  <depend>autoware_utils_logging_v49</depend>
  <depend>autoware_utils_math_v49</depend>
  <depend>autoware_utils_pcl_v49</depend>
  <depend>autoware_utils_rclcpp_v49</depend>
  <depend>autoware_utils_system_v49</depend>
  <depend>autoware_utils_tf_v49</depend>
  <depend>autoware_utils_uuid_v49</depend>
  <depend>autoware_utils_visualization_v49</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common_v49</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>