<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>cuda_blackboard_v49</name>
  <version>0.1.0</version>
  <description>The cuda_blackboard package</description>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos-Tsunekawa</maintainer>

  <license>Apache 2</license>
  <author>Kenzo Lobos-Tsunekawa</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>negotiated_v49</depend>
  <depend>negotiated_interfaces_v49</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>