<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>managed_transform_buffer_v49</name>
  <version>0.1.0</version>
  <description>The managed_transform_buffer package</description>

  <maintainer email="amadeusz.szymko.2@tier4.jp">Amadeusz Szymko</maintainer>

  <license>Apache License 2.0</license>

  <author email="amadeusz.szymko.2@tier4.jp">Amadeusz Szymko</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>