<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>negotiated_v49</name>
  <version>0.1.0</version>
  <description>A package containing a negotiating publisher and subscription.</description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>Apache-2.0</license>
  <license>Boost</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>negotiated_interfaces_v49</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>